# infrastructure

./: .ansible-lint  .editorconfig  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .yamlfmt  .yamllint  AGENTS.md  CLAUDE.md  Makefile  README.md  ansible.cfg  pyproject.toml  pytest.ini  requirements.yml
.claude/: settings.local.json
.claude/tools/: hook_logger.py  hook_stop.py  memory_cli.py  on_notification_hook.py  subagent-logger.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  initialize.sh  post-start.sh  setup.sh
.github/workflows/: ci.yml
.ssh/: .gitignore  README.md  known_hosts
.windsurf/workflows/: plan.md
ai_working/ddd/: test_report.md
docs/: AUTHENTICATION.md  GETTING_STARTED.md  IAC_STYLE_GUIDE.md  MAKEFILE_REFERENCE.md  MIGRATION_NOTES.md  QUALITY_METRICS.md  SSH_SETUP.md  STANDARDS.md  TESTING.md  TEST_STRATEGY.md  quality_report.md  tech-debt-playbook-idempotency.md
inventory/: hosts.yml.example
playbooks/: auth-check.yml  debug_nfs.yml  deploy-all-stacks.yml  deploy-stack.yml  deploy-zitadel.yml  destroy-all-stacks.yml  destroy-zitadel.yml  docker-bootstrap-foundation.yml  docker-bootstrap.yml  docker-check-health.yml  docker-deploy-all.yml  docker-deploy-bootstrap.yml  docker-deploy-services.yml  docker-deploy-stack.yml  docker-destroy-all.yml  docker-doctor.yml  docker-install.yml  install-docker.yml  mount-nas.yml  ssh-diagnose.yml  zitadel-configure-apps.yml  zitadel-reset.yml  zitadel-setup.yml
scripts/: analyze_iac.py  ansible_exec.sh  bootstrap.sh  changed_files.py  run_molecule.sh  ssh-setup.sh  update_known_hosts.py
stacks/: README.md  docker-compose.bootstrap.yml  docker-compose.services.yml  docker-compose.yml
tests/: README.md  conftest.py  test_analyze_iac.py  test_analyze_iac_cli.py  test_bootstrap_playbook.py
tools/: claude_transcript_builder.py  codex_transcripts_builder.py  collect_files.py  create_worktree.py  dag_loader.py  dag_navigator.py  transcript_formatter.py
(+69 files in other folders)
