[project]
name = "infrastructure"
version = "0.1.0"
description = "Homelab infrastructure as code using Ansible and Docker"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "ansible>=10.0.0",         # newer core version for Python 3.12 compatibility
    "ansible-lint>=25.0.0",    # matches modern ansible-core
    "yamllint>=1.35.0"
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.3.0",
    "pytest-ansible>=0.6.0"
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4"]
