[project]
name = "infrastructure"
version = "0.1.0"
description = "Homelab Infrastructure-as-Code using Ansible"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=9.0.0",
    "ansible-lint>=24.0.0",
    "yamllint>=1.35.0",
]

[project.optional-dependencies]
dev = []

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

